k3s-userapps/logto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logto
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: logto
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: logto
    spec:
      containers:
        - image: 'svhd/logto:1.34.0'
          imagePullPolicy: IfNotPresent
          name: logto
          command: ["sh" ]
          args: [ "-c", "npm run cli db seed -- --swe && npm run cli db alteration deploy next && npm start" ]
          livenessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 10
          ports:
            - containerPort: 3001
              protocol: TCP
              name: "http"
            - containerPort: 3002
              protocol: TCP
              name: "http-admin"
