k3s-userapps/logto/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logto
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
  - name: http-admin
    port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app.kubernetes.io/pod: logto
  type: ClusterIP
